--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@dnd-kit-svelte/svelte": "^0.1.3",
+		"@dnd-kit/abstract": "^0.1.21",
+		"@dnd-kit/helpers": "^0.1.21",
 		"@node-rs/argon2": "^2.0.2",
 		"postgres": "^3.4.5",
 		"zod": "3.25.76"
